Fix styling for last child of action buttons
Old approach of making right padding smaller results in unsightly, off-center icon (noticeable when focus outline is visible). This visually remains the same, but reduces right-hand margin instead.

--- a/src/scss/box.scss
+++ b/src/scss/box.scss
@@ -369,7 +369,7 @@
 
   &:not(.box-draggable-row) {
     .action-buttons .row-btn:last-child {
-      padding-right: 2px !important;
+      margin-right: -6px !important;
     }
   }
 
